--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,7 +1,18 @@
-* {
-  box-sizing: border-box;
+:root {
+  --orange: rgb(255, 143, 15);
+  --dark-orange: rgb(199, 109, 6);
+  --red: rgb(255 72 15);
 }
 
+.container {
+  max-width: 400px;
+}
+
+.active {
+  text-decoration: underline;
+  font-style: italic;
+  background-color: var(--dark-orange);
+}
 /* Form */
 form {
   margin-bottom: 52px;
@@ -44,7 +55,7 @@ input[type='submit'] {
   text-transform: uppercase;
   padding: 8px 15px;
   border: none;
-  background: #f00;
+  background: var(--orange);
   color: #fff;
   font-size: 14px;
   cursor: pointer;
@@ -69,7 +80,7 @@ input[type='submit'] {
 }
 
 .pizza span {
-  background: #ff0000;
+  background: var(--red);
   color: white;
   font-weight: 600;
   padding: 5px;
@@ -103,7 +114,7 @@ input[type='submit'] {
   margin: 0 40px;
   text-align: center;
   margin-top: -1rem;
-  background: red;
+  background: var(--orange);
   display: inline;
   line-height: 1.3;
   font-size: 27px;
@@ -124,7 +135,7 @@ input[type='submit'] {
 }
 
 /* Pagination */
-.pagination {
+/* .pagination {
   text-align: center;
   display: inline-grid;
   grid-template-columns: repeat(4, auto);
@@ -134,6 +145,19 @@ input[type='submit'] {
   margin: 52px 0 20px;
   border: 1px solid #e1e1e1;
   border-radius: 10px;
+} */
+.pagination {
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: center;
+  align-content: center;
+  margin: 52px 0 20px;
+  border: 1px solid #e1e1e1;
+  border-radius: 10px;
+  background-color: #fff;
 }
 
 .pagination > * {
@@ -141,9 +165,9 @@ input[type='submit'] {
   padding: 15px 20px;
   border-right: 1px solid #e1e1e1;
 }
-.pagination :first-child {
+/* .pagination :first-child {
   cursor: pointer;
-}
+} */
 .pagination :last-child {
   cursor: pointer;
   border-right: 0;
